--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.TripPhoto"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
         <meta-data
