--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,4 +113,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
+    implementation "androidx.constraintlayout:constraintlayout:2.2.0-alpha07"
+    implementation "com.google.android.material:material:1.9.0-alpha02"
+
 }
